Add full reproducible CLI and artifact workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,6 @@ requires-python = ">=3.11"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+
+[project.scripts]
+skyjo-optimize = "skyjo_optimizer.cli:main"
