Add pinned dev dependency metadata and workflow automation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,12 @@ name = "skyjo-optimizer"
 version = "0.1.0"
 description = "Evolutionary strategy testing harness for Skyjo"
 requires-python = ">=3.11"
+dependencies = []
+
+[project.optional-dependencies]
+dev = [
+  "pytest>=8,<9",
+]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
